Open Mod UI > Tools and click History for full details:

- changed Caustic Zap progression to one additional enemy per slot level
- changed Powerful metamagic cost to 1 fixed point
- changed Roguish Arcane Scoundrel's gambit to a bonus action
- rebuilt Sorcerous Field Manipulator subclass - RESPEC IS REQUIRED
- removed backward compatibility support for Tactical Surge - RESPEC IS REQUIRED
- removed monster attacks swap feature as it was causing issues on MP - RESPEC IS REQUIRED IF IN SHAPE FORM / SUMMONS